src/public/FUA_Previsualization.css
body {
    font-family: Arial, sans-serif;
}

table {
    border-spacing: 0px;
}

/* General Styles */

#fua-render-container {
    all: unset;
}

.fua-page {
    border: 1px solid #000;    
    box-sizing: border-box;
    position: relative;
}

.table-section {
    border-collapse: collapse;
    border-spacing: 0;
    border: 2px solid black; /* outer border */
    width: 100%;
    table-layout: fixed;
    position: absolute;
}

.section-header {
    width: 100%;
    background-color: lightgray;
    border: 2px solid black;
}

.section-content {
    position: relative;
    width: 100%;
    height: 100%;
}

.field-content {
    position: relative;
    width: 100%;
    height: 100%;
}

.table-field {
    border: 1px solid black;
    border-collapse: collapse;
    position: absolute;
}

.field-border{
    border: 1px solid black;
}

.table-data {
    border: 1px solid black; /* inner borders */
    width: 100%;
    text-align: center;
}

.auxTable {
    width: 100%;
    border-collapse: collapse;
    border: 1px solid black;
    border-spacing: 0px;
}

.text-container {
    /* Text alignment */
    text-align: center;
    vertical-align: middle;
    /* Prevent text from overflowing */
    overflow: hidden;
    white-space: normal;
    text-overflow: clip;
    /* Container query support */
    container-type: size;
    container-name: card;
    /* Dynamic font sizing */
    font-size: clamp(3px, 0.9cqh, 100%);
    /* Optional: force text to scale down if needed */
    line-height: 1;
}



.blank-space {
    font-weight: bold;
    background-color: aquamarine;
}

.section-title {
    width: 100%;
    height: 12mm;
    font-weight: bold;
    display: flex;
    align-items: center; /* Vertical centering */
    justify-content: center; /* Optional: also center horizontally */
    border: 1px solid #000;
    box-sizing: border-box;
    background-color: gray;
}
 



  

